src/objects/Lead/fields/BK_Product_IntCnt_10__c.field-meta.xml
<CustomField>
    <fullName>BK_Product_IntCnt_10__c</fullName>
    <formula>If(INCLUDES(BK_Product_Interest__c,&quot;KMA30&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BK_Product_IntCnt_10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>