src/objects/Lead/fields/BK_Product_IntCnt_12__c.field-meta.xml
<CustomField>
    <fullName>BK_Product_IntCnt_12__c</fullName>
    <formula>if(INCLUDES(BK_Product_Interest__c,&quot;KT74&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BK_Product_IntCnt_12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>