src/objects/Lead/fields/BK_Product_IntVal_8__c.field-meta.xml
<CustomField>
    <fullName>BK_Product_IntVal_8__c</fullName>
    <formula>if(INCLUDES(BK_Product_Interest__c,&quot;KI300&quot;),4500,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BK_Product_IntVal_8</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>