src/objects/Lead/fields/Bus_Devt_Segment__c.field-meta.xml
<CustomField>
    <fullName>Bus_Devt_Segment__c</fullName>
    <description>Req 5786.  . Controlling field for Bus Devt Initiative field.  Initially limited to just NSW, but will expand to other BGs</description>
    <label>Bus Devt Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NSW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>