src/objects/Lead/fields/Bus_Ops_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Bus_Ops_Approval_Date__c</fullName>
    <description>Req #1312. Required for Marketo Sync</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Bus Ops Approval Date</label>
    <type>Date</type>
</CustomField>