src/objects/Lead/fields/Cabin__c.field-meta.xml
<CustomField>
    <fullName>Cabin__c</fullName>
    <label>Cabin Entertainment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AIS 2000</fullName>
            </value>
            <value>
                <fullName>CG 710</fullName>
            </value>
            <value>
                <fullName>C-Series</fullName>
            </value>
            <value>
                <fullName>Cup Holder Media Dock</fullName>
            </value>
            <value>
                <fullName>E-Series</fullName>
            </value>
            <value>
                <fullName>HD-710 Satcom</fullName>
            </value>
            <value>
                <fullName>Jetmap</fullName>
            </value>
            <value>
                <fullName>Ovation Select</fullName>
            </value>
            <value>
                <fullName>PCU</fullName>
            </value>
            <value>
                <fullName>Satcom Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>