src/objects/Lead/fields/CBT_Team__c.field-meta.xml
<CustomField>
    <fullName>CBT_Team__c</fullName>
    <label>CBT Team</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CBT__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ACST</fullName>
            </value>
            <value>
                <fullName>Aero Level Other</fullName>
            </value>
            <value>
                <fullName>Airbus Companies</fullName>
            </value>
            <value>
                <fullName>Airbus Defense &amp; Space</fullName>
            </value>
            <value>
                <fullName>Airbus Helicopters</fullName>
            </value>
            <value>
                <fullName>Air Mobility, Surveillance &amp; Engagement</fullName>
            </value>
            <value>
                <fullName>AMCOM/SOCOM/CECOM</fullName>
            </value>
            <value>
                <fullName>AMFS</fullName>
            </value>
            <value>
                <fullName>APAC BGA</fullName>
            </value>
            <value>
                <fullName>APAC OEM</fullName>
            </value>
            <value>
                <fullName>APEX Non-EMEA</fullName>
            </value>
            <value>
                <fullName>ASM: Advanced Sensors &amp; Microsystems</fullName>
            </value>
            <value>
                <fullName>ASP: Advanced Sensors &amp; Prototyping</fullName>
            </value>
            <value>
                <fullName>ATR Airlines Americas</fullName>
            </value>
            <value>
                <fullName>ATR Airlines Asia Pacific</fullName>
            </value>
            <value>
                <fullName>ATR Airlines EMEAI</fullName>
            </value>
            <value>
                <fullName>ATR Airlines Other</fullName>
            </value>
            <value>
                <fullName>ATR Other</fullName>
            </value>
            <value>
                <fullName>Australasia Defense</fullName>
            </value>
            <value>
                <fullName>Avions de Transport Regional</fullName>
            </value>
            <value>
                <fullName>BAAPAC</fullName>
            </value>
            <value>
                <fullName>Bendix King</fullName>
            </value>
            <value>
                <fullName>BGA Other</fullName>
            </value>
            <value>
                <fullName>Boeing ATR</fullName>
            </value>
            <value>
                <fullName>Bombardier ATR</fullName>
            </value>
            <value>
                <fullName>Bombardier BGA</fullName>
            </value>
            <value>
                <fullName>C&amp;PS AERO</fullName>
            </value>
            <value>
                <fullName>Canadian Military</fullName>
            </value>
            <value>
                <fullName>CBMS</fullName>
            </value>
            <value>
                <fullName>CIPS: Crew Interface &amp; Platform Systems</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>