src/objects/Lead/fields/Comm__c.field-meta.xml
<CustomField>
    <fullName>Comm__c</fullName>
    <label>Navigation/Communication</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AV-900 Digital Audio System</fullName>
            </value>
            <value>
                <fullName>HF 1050</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>