src/objects/Lead/fields/Converted_Channel_Partner_Age__c.field-meta.xml
<CustomField>
    <fullName>Converted_Channel_Partner_Age__c</fullName>
    <formula>CASE(Status, 
&apos;Converted - Channel Partner&apos;, (Today() - Converted_Channel_Partner_Date__c), 
Converted_Date__c - Converted_Channel_Partner_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted Channel Partner Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>