src/objects/Lead/fields/dateTime_test__c.field-meta.xml
<CustomField>
    <fullName>dateTime_test__c</fullName>
    <label>dateTime test</label>
    <type>DateTime</type>
</CustomField>