src/objects/Lead/fields/Days_in_MQL_Status__c.field-meta.xml
<CustomField>
    <fullName>Days_in_MQL_Status__c</fullName>
    <formula>IF (ISBLANK(MQL_Age__c), &quot;&quot;, 
IF (MQL_Age__c &lt;= 3, &quot;0-3 Days&quot;, 
IF (MQL_Age__c &lt;= 10, &quot;03-10 Days&quot;, 
IF (MQL_Age__c &lt;= 30, &quot;11-30 Days&quot;, 
&quot;31+ Days&quot;))))</formula>
    <label>Days in MQL Status</label>
    <type>Text</type>
</CustomField>