src/objects/Lead/fields/Deal_Name__c.field-meta.xml
<CustomField>
    <fullName>Deal_Name__c</fullName>
    <description>The name of the deal, which is provided by the partner upon the creation of the deal

Req #1312. Required for Marketo Sync</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Deal Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>