src/objects/Lead/fields/Displays__c.field-meta.xml
<CustomField>
    <fullName>Displays__c</fullName>
    <label>Displays</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CDS/R</fullName>
            </value>
            <value>
                <fullName>DU-875 / DU-885</fullName>
            </value>
            <value>
                <fullName>KFD-840</fullName>
            </value>
            <value>
                <fullName>KSN-770</fullName>
            </value>
            <value>
                <fullName>MFRD</fullName>
            </value>
            <value>
                <fullName>SV-PFD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>