src/objects/Lead/fields/Export_Compliance_Content_ITAR_EAR__c.field-meta.xml
<CustomField>
    <fullName>Export_Compliance_Content_ITAR_EAR__c</fullName>
    <label>Export Compliance Content (ITAR/EAR)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compliance Queue GTO</fullName>
            </value>
            <value>
                <fullName>Compliance Queue CSO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>