src/objects/Lead/fields/Follow_Up_action_requested__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_action_requested__c</fullName>
    <label>Follow up action requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Send a brochure</fullName>
            </value>
            <value>
                <fullName>Schedule a demonstration</fullName>
            </value>
            <value>
                <fullName>Schedule a personal consultation</fullName>
            </value>
            <value>
                <fullName>Call me</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>