src/objects/Lead/fields/FSE_Initiator_Name__c.field-meta.xml
<CustomField>
    <fullName>FSE_Initiator_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Populate with creator name</inlineHelpText>
    <label>Initiator Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>