src/objects/Lead/fields/GA__c.field-meta.xml
<CustomField>
    <fullName>GA__c</fullName>
    <label>General Aviation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AV8OR ACE</fullName>
            </value>
            <value>
                <fullName>GNS-XLS</fullName>
            </value>
            <value>
                <fullName>KDR 610</fullName>
            </value>
            <value>
                <fullName>KFD 840</fullName>
            </value>
            <value>
                <fullName>KSN 770</fullName>
            </value>
            <value>
                <fullName>RDR 2000/2100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>