src/objects/Lead/fields/Government_Compliance_SM_M_Content__c.field-meta.xml
<CustomField>
    <fullName>Government_Compliance_SM_M_Content__c</fullName>
    <label>Government Compliance/SM&amp;M Content</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compliance Queue GTO</fullName>
            </value>
            <value>
                <fullName>Compliance Queue CSO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>