src/objects/Lead/fields/HONEYWELL_ID__c.field-meta.xml
<CustomField>
    <fullName>HONEYWELL_ID__c</fullName>
    <label>HONEYWELL ID</label>
    <length>225</length>
    <type>Text</type>
</CustomField>