src/objects/Lead/fields/IPAD_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>IPAD_Lead_Source__c</fullName>
    <description>added on demand for iPad integration</description>
    <label>IPAD Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>iPad Lead  - BA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>