src/objects/Lead/fields/Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Function__c</fullName>
    <label>Job Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board of Directors</fullName>
            </value>
            <value>
                <fullName>Administration/Other</fullName>
            </value>
            <value>
                <fullName>Business/General Management</fullName>
            </value>
            <value>
                <fullName>Business Development Management</fullName>
            </value>
            <value>
                <fullName>CEO/President/Owner</fullName>
            </value>
            <value>
                <fullName>CFO/Controller/Treasurer</fullName>
            </value>
            <value>
                <fullName>CIO (Chief Information Officer)</fullName>
            </value>
            <value>
                <fullName>CMO (Chief Marketing Officer)</fullName>
            </value>
            <value>
                <fullName>COO (Chief Operating Officer)</fullName>
            </value>
            <value>
                <fullName>CTO (Chief Technology Officer)</fullName>
            </value>
            <value>
                <fullName>Executive Management</fullName>
            </value>
            <value>
                <fullName>IT Management</fullName>
            </value>
            <value>
                <fullName>IT Technical/Engineer</fullName>
            </value>
            <value>
                <fullName>Network/Telecom Engineer</fullName>
            </value>
            <value>
                <fullName>Network/Telecom Management</fullName>
            </value>
            <value>
                <fullName>Operations Management</fullName>
            </value>
            <value>
                <fullName>Other C-Suite Positions</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Product Technical</fullName>
            </value>
            <value>
                <fullName>Purchasing Management</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Marketing Management</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Marketing Technical</fullName>
            </value>
            <value>
                <fullName>A</fullName>
                <isActive>false</isActive>
                <label>A</label>
            </value>
            <value>
                <fullName>B</fullName>
                <isActive>false</isActive>
                <label>B</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>