src/objects/Lead/fields/Last_User_Modified__c.field-meta.xml
<CustomField>
    <fullName>Last_User_Modified__c</fullName>
    <description>Requirement 4121</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Captures most recent modification from non-admin/automated user.  Tracking began May 19, 2018</inlineHelpText>
    <label>Last User Modified</label>
    <type>DateTime</type>
</CustomField>