src/objects/Lead/fields/Lead_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Creation_Date__c</fullName>
    <description>Please use other Lead Creation Date field</description>
    <label>Lead Creation Date (Retired)</label>
    <type>Date</type>
</CustomField>