src/objects/Lead/fields/Lead_Description__c.field-meta.xml
<CustomField>
    <fullName>Lead_Description__c</fullName>
    <inlineHelpText>Describe the Lead using the following characteristics: Lead background, Solution, Fleet Size, Quantity per Aircraft, References, Price Per Unit, Existing leads or opportunity on same subject, Additional information.</inlineHelpText>
    <label>Lead Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>