src/objects/Lead/fields/Lead_Market_Selection__c.field-meta.xml
<CustomField>
    <fullName>Lead_Market_Selection__c</fullName>
    <label>Lead Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Airlines/Cargo</fullName>
            </value>
            <value>
                <fullName>Business Aviation</fullName>
            </value>
            <value>
                <fullName>Defense</fullName>
            </value>
            <value>
                <fullName>General Aviation</fullName>
            </value>
            <value>
                <fullName>Helicopters</fullName>
            </value>
            <value>
                <fullName>Non-Aerospace</fullName>
            </value>
            <value>
                <fullName>Space</fullName>
            </value>
            <value>
                <fullName>UAS - UAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>