src/objects/Lead/fields/Lead_owner_change__c.field-meta.xml
<CustomField>
    <fullName>Lead_owner_change__c</fullName>
    <defaultValue>&apos;FALSE&apos;</defaultValue>
    <description>This is created to track the owner change for &apos;Auto reminder for Lead&apos; process builder.</description>
    <label>Lead owner change</label>
    <length>18</length>
    <type>Text</type>
</CustomField>