src/objects/Lead/fields/Lead_Region__c.field-meta.xml
<CustomField>
    <fullName>Lead_Region__c</fullName>
    <label>Lead Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
                <label>Asia/Pacific Rim</label>
            </value>
            <value>
                <fullName>EMEAI</fullName>
                <label>Europe/MiddleEast/Africa/India</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>