src/objects/Lead/fields/Lead_Transfer_Days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Transfer_Days__c</fullName>
    <formula>Today()-LastTransferDate+1</formula>
    <label>Lead Transfer Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>