src/objects/Lead/fields/Lighting__c.field-meta.xml
<CustomField>
    <fullName>Lighting__c</fullName>
    <label>Lighting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Astreon Tail for GS</fullName>
            </value>
            <value>
                <fullName>Astreon Wing Tip for GS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>