src/objects/Lead/fields/Mech__c.field-meta.xml
<CustomField>
    <fullName>Mech__c</fullName>
    <label>Mechanical</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>36-150[CL]</fullName>
            </value>
            <value>
                <fullName>36-150 [G]</fullName>
            </value>
            <value>
                <fullName>TFE-731 Astra</fullName>
            </value>
            <value>
                <fullName>TFE-731 Falcon 10 F100</fullName>
            </value>
            <value>
                <fullName>TFE-731 Falcon 50</fullName>
            </value>
            <value>
                <fullName>TFE-731 Falcon F20 and 900</fullName>
            </value>
            <value>
                <fullName>TFE-731 Hawker 400-H600/H700</fullName>
            </value>
            <value>
                <fullName>TFE-731 Jetstar II</fullName>
            </value>
            <value>
                <fullName>TFE-731 Lear 31/35/36</fullName>
            </value>
            <value>
                <fullName>TFE-731 Lear 40/45 20BR Engine Overview</fullName>
            </value>
            <value>
                <fullName>TFE-731 Lear 45-20BR (Bombardier)</fullName>
            </value>
            <value>
                <fullName>TFE-731 Lear 55</fullName>
            </value>
            <value>
                <fullName>TFE-731 N1 Deec Upgrade</fullName>
            </value>
            <value>
                <fullName>TFE-731 Sabreiliner 65</fullName>
            </value>
            <value>
                <fullName>TFE-731 WestStar 50-4</fullName>
            </value>
            <value>
                <fullName>TFE-731 Westwind</fullName>
            </value>
            <value>
                <fullName>TPE-331 -10 Conv-Beech King B100</fullName>
            </value>
            <value>
                <fullName>TPE-331 -10 Conv-Dornier</fullName>
            </value>
            <value>
                <fullName>TPE-331 -10 Conv-Mitsubishi</fullName>
            </value>
            <value>
                <fullName>TPE-331 -10 Conv-Overview</fullName>
            </value>
            <value>
                <fullName>TPE-331 -10 Conv-Twin Commander</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>