src/objects/Lead/fields/MQL_Age__c.field-meta.xml
<CustomField>
    <fullName>MQL_Age__c</fullName>
    <formula>CASE(Status, 
&apos;Marketing Qualified Leads (MQL)&apos;, (Today() - MQL_Date__c), 
SAL_Date__c - MQL_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MQL Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>