src/objects/Lead/fields/Nav__c.field-meta.xml
<CustomField>
    <fullName>Nav__c</fullName>
    <label>Flight Management System</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CD-820</fullName>
            </value>
            <value>
                <fullName>DL-950</fullName>
            </value>
            <value>
                <fullName>FMS 6.1</fullName>
            </value>
            <value>
                <fullName>FMS NZ-2000</fullName>
            </value>
            <value>
                <fullName>GNS-XLS</fullName>
            </value>
            <value>
                <fullName>Laserfef V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>