src/objects/Lead/fields/Non_entitled_Products__c.field-meta.xml
<CustomField>
    <fullName>Non_entitled_Products__c</fullName>
    <description>Req #1312. Required for Marketo Sync</description>
    <label>Non-entitled Products</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>