src/objects/Lead/fields/Opportunity_Search_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Search_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to create a new Opportunity. This means that you have conducted a search for an existing opportunity and none was found. “This field is only available after the Lead Status has moved to SQL.”</inlineHelpText>
    <label>Opportunity Search Confirmation</label>
    <type>Checkbox</type>
</CustomField>