src/objects/Lead/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Opportunity within partner agreement w/o Offer Support</fullName>
                <default>true</default>
                <label>Opportunity within partner agreement w/o Offer Support</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>