src/objects/Lead/fields/Original_PSM__c.field-meta.xml
<CustomField>
    <fullName>Original_PSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original PSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads4</relationshipName>
    <type>Lookup</type>
</CustomField>