src/objects/Lead/fields/Part_Number_s__c.field-meta.xml
<CustomField>
    <fullName>Part_Number_s__c</fullName>
    <label>Part/Product Number</label>
    <type>TextArea</type>
</CustomField>