src/objects/Lead/fields/Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Phone_1__c</fullName>
    <formula>Contact__r.Phone_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Work Number</label>
    <type>Text</type>
</CustomField>